--- a/cylc/meta.yaml
+++ b/cylc/meta.yaml
@@ -1,6 +1,6 @@
 package:
-  name: cylc
-  version: 8.0.0
+  name: "cylc"
+  version: "8.0.0"
 
 source:
   fn: cylc-ui-8.0.0.tar.gz
@@ -9,10 +9,10 @@ source:
 
 requirements:
   build:
-    - nodejs >= 12.0
+    - nodejs >=8.8
 
   run:
-    - python >= 3.7
+    - python
 
 about:
   home: https://cylc.github.io
